# src/QueueManagement.Api/Domain/BusinessRules/QueueEntryStatuses.cs
@@ -3,4 +3,8 @@ namespace QueueManagement.Api.Domain.BusinessRules;
 public static class QueueEntryStatuses
 {
     public const string Waiting = "Waiting";
+    public const string Called = "Called";
+    public const string Served = "Served";
+    public const string Skipped = "Skipped";
+    public const string Cancelled = "Cancelled";
 }
